--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'Literature -- Periodicals'
 - !lcsh 'American literature -- Periodicals'
+- GITenberg
 title: McClure's Magazine, Vol 31, No 2, June 1908
 url: http://www.gutenberg.org/ebooks/27699
